--- a/KuranX.App/Core/Pages/ResultF/ResultFrame.xaml
+++ b/KuranX.App/Core/Pages/ResultF/ResultFrame.xaml
@@ -8,7 +8,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d"
       d:DesignHeight="708" d:DesignWidth="1115" d:MaxHeight="708" d:MaxWidth="1270" d:MinWidth="1115"
-      Title="RemiderFrame" Background="#FAFAFA">
+      Title="RemiderFrame" Background="#FAFAFA" Loaded="Page_Loaded">
 
     <Grid>
 
