--- a/KuranX.App/App.xaml
+++ b/KuranX.App/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:KuranX.App"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             StartupUri="Core/Windows/HomeScreen.xaml">
+             Startup="App_Startup">
 
     <Application.Resources>
 
