--- a/KuranX.App/Core/ResourceXaml/verseDesing.xaml
+++ b/KuranX.App/Core/ResourceXaml/verseDesing.xaml
@@ -25,6 +25,19 @@
         <Setter Property="Height" Value="80" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="Margin" Value="25,0,25,0" />
+
+        <Style.Triggers>
+            <Trigger Property="Visibility" Value="Visible">
+                <Trigger.EnterActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetProperty="Opacity"
+                             From="0.0" To="1.0" Duration="0:0:0.5" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.EnterActions>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
     <!-- Border -->
@@ -577,9 +590,10 @@
         <Setter Property="UseLayoutRounding" Value="True" />
         <Setter Property="Background" Value="#F0433A" />
         <Setter Property="Foreground"  Value="#FFFFFF" />
+        <Setter Property="Height" Value="30" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate>
+                <ControlTemplate TargetType="{x:Type CheckBox}">
                     <Border x:Name="target1" Padding="25,5,25,5" Style="{DynamicResource defaultBorderShadowEffect}" Background="{Binding Path=Tag,RelativeSource={RelativeSource TemplatedParent}}" SnapsToDevicePixels="True" UseLayoutRounding="True">
                         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
                             <TextBlock x:Name="target2" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontFamily="{DynamicResource PoppinsMedium}" Foreground="{TemplateBinding Foreground}" />
@@ -587,6 +601,25 @@
                         </StackPanel>
                     </Border>
                     <ControlTemplate.Triggers>
+
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter TargetName="target1" Property="Background" Value="#66E21F" />
+                            <Setter TargetName="target2" Property="Foreground" Value="#FFFFFF" />
+                            <Setter TargetName="target3" Property="Foreground" Value="#FFFFFF" />
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="False">
+                            <Setter TargetName="target1" Property="Background" Value="#FFFFFF" />
+                            <Setter TargetName="target2" Property="Foreground" Value="#1C1E2F" />
+                            <Setter TargetName="target3" Property="Foreground" Value="#1C1E2F" />
+                        </Trigger>
+
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="target1" Property="Background" Value="#F0433A" />
+                            <Setter TargetName="target2" Property="Foreground" Value="#FFFFFF" />
+                            <Setter TargetName="target3" Property="Foreground" Value="#FFFFFF" />
+                            <Setter Property="Cursor" Value="Hand" />
+                        </Trigger>
+
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter TargetName="target1" Property="Background" Value="#F0433A" />
                             <Setter TargetName="target2" Property="Foreground" Value="#FFFFFF" />
@@ -597,17 +630,6 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-
-        <Style.Triggers>
-            <Trigger Property="IsChecked" Value="True">
-                <Setter Property="Background" Value="#66E21F" />
-                <Setter Property="Foreground" Value="#FFFFFF" />
-            </Trigger>
-            <Trigger Property="IsChecked" Value="False">
-                <Setter Property="Background" Value="#FFFFFF" />
-                <Setter Property="Foreground" Value="#1C1E2F" />
-            </Trigger>
-        </Style.Triggers>
     </Style>
 
     <!-- CheckBox -->
