--- a/KuranX.App/App.xaml
+++ b/KuranX.App/App.xaml
@@ -9,14 +9,9 @@
 
         <ResourceDictionary>
 
-            <FontFamily x:Key="PoppinsSemiBold">pack://application:,,,/Resource/Fonts/Poppins-SemiBold.ttf#Poppins</FontFamily>
-            <FontFamily x:Key="PoppinsMedium">pack://application:,,,/Resource/Fonts/Poppins-Medium.ttf#Poppins</FontFamily>
-            <FontFamily x:Key="PoppinsRegular">pack://application:,,,/Resource/Fonts/Poppins-Regular.ttf#Poppins</FontFamily>
-            <FontFamily x:Key="ArabicaNormal">pack://application:,,,/Resource/Fonts/arabica.ttf#Arabica</FontFamily>
-            <FontFamily x:Key="XBZarRegular">pack://application:,,,/Resource/Fonts/XBZar.ttf#XBZar</FontFamily>
-            <FontFamily x:Key="XBZarBold">pack://application:,,,/Resource/Fonts/XBZarBd.ttf#XBZar</FontFamily>
-
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Resource/Fonts/Fonts.xaml" />
+
                 <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/defaultDesign.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/splashDesign.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/loginDesign.xaml" />
@@ -31,6 +26,7 @@
                 <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/libraryDesing.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/NotesDesing.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/resultDesing.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/AdminDesing.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
