--- a/KuranX.App/Core/Pages/NoteF/NoteItem.xaml
+++ b/KuranX.App/Core/Pages/NoteF/NoteItem.xaml
@@ -4,8 +4,9 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:KuranX.App.Core.Pages"
-        xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
-       xmlns:gif="http://wpfanimatedgif.codeplex.com"
+      xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
+      xmlns:gif="http://wpfanimatedgif.codeplex.com"
+      xmlns:extension="clr-namespace:KuranX.App.Core.Classes"
       mc:Ignorable="d"
       d:DesignHeight="708" d:DesignWidth="1115" d:MaxHeight="708" d:MaxWidth="1270" d:MinWidth="1115"
       Title="NoteItem" Background="#FAFAFA">
@@ -300,25 +301,35 @@
         <StackPanel Grid.Row="0" Orientation="Vertical" VerticalAlignment="Center">
             <Border Style="{DynamicResource frameTab}">
                 <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="10" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="250" />
-                    </Grid.ColumnDefinitions>
-                    <Border Grid.Column="0"  CornerRadius="5 0 0 5" x:Name="noteType" />
 
-                    <StackPanel Grid.Column="1" Orientation="Vertical" Margin="10 5 10 5">
-                        <TextBlock x:Name="loadHeader" Text="" Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="16" />
-                        <TextBlock x:Name="loadCreate" Text="" Foreground="#7B7B7B" FontFamily="{DynamicResource PoppinsMedium}" FontSize="11" Margin="0 5 0 5" />
-                        <TextBlock x:Name="loadLocation" Text="" Foreground="#C9283E" FontFamily="{DynamicResource PoppinsMedium}" FontSize="11" />
-                    </StackPanel>
-                    <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center">
-                        <TextBlock TextWrapping="Wrap" TextAlignment="Center" Width="250" x:Name="infoText" Text="" Foreground="#C9283E" FontFamily="{DynamicResource PoppinsMedium}" FontSize="12" />
-                    </StackPanel>
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+
+                    <Grid x:Name="loadHeaderStack" Grid.Row="0"  Style="{DynamicResource aniEffectFadeGrid}" Visibility="Hidden">
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="10" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="250" />
+                        </Grid.ColumnDefinitions>
+
+                        <Border Grid.Column="0"  CornerRadius="5 0 0 5" x:Name="noteType" />
+
+                        <StackPanel Grid.Column="1" Orientation="Vertical" Margin="10 5 10 5">
+                            <TextBlock x:Name="loadHeader" Text="" Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="16" />
+                            <TextBlock x:Name="loadCreate" Text="" Foreground="#7B7B7B" FontFamily="{DynamicResource PoppinsMedium}" FontSize="11" Margin="0 5 0 5" />
+                            <TextBlock x:Name="loadLocation" Text="" Foreground="#C9283E" FontFamily="{DynamicResource PoppinsMedium}" FontSize="11" />
+                        </StackPanel>
+                        <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center">
+                            <TextBlock TextWrapping="Wrap" TextAlignment="Center" Width="250" x:Name="infoText" Text="" Foreground="#C9283E" FontFamily="{DynamicResource PoppinsMedium}" FontSize="12" />
+                        </StackPanel>
+                    </Grid>
                 </Grid>
             </Border>
         </StackPanel>
-        <Grid Grid.Row="1"  Grid.ColumnSpan="2">
+
+        <Grid Grid.Row="1"  Grid.ColumnSpan="2" Style="{DynamicResource aniEffectFadeGrid}" Visibility="Hidden" x:Name="controlBar">
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -332,16 +343,24 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <Button x:Name="BackButton" Grid.Column="0" Style="{DynamicResource defaultActionButonBstrpRedd}" Tag="ArrowLeft" Content="Geri Dön" Click="BackButton_Click" />
-            <Button x:Name="gotoVerseButton" Grid.Column="1" Style="{DynamicResource defaultActionButonBstrpTurquoise}" Tag="ArrowRight" Content="Ayete Git" Click="gotoVerseButton_Click" />
-            <Button x:Name="sendResult" Grid.Column="2" Style="{DynamicResource defaultActionButonBstrpOrange}" Tag="Archive" Content="Sonuc" Click="sendResult_Click" />
-            <Button x:Name="printButton" Grid.Column="3" Style="{DynamicResource defaultActionButonBstrpDark}" Tag="Printer" Content="Yazdır" Click="printButton_Click" />
-            <Button x:Name="deleteButton" Grid.Column="4" Style="{DynamicResource defaultActionButonBstrpRedd}" Tag="Trash" Content="Notu Sil" Click="deleteButton_Click" />
-            <Button x:Name="saveButton" Grid.Column="5" IsEnabled="False" Style="{DynamicResource defaultActionButonBstrpDynamicSave}" Tag="Save" Content="Kaydet" Click="saveButton_Click" />
+
+            <Button x:Name="BackButton" Grid.Column="0" Style="{DynamicResource defaultActionButonBstrpRedd}" Tag="ArrowLeft" Content="Geri Dön" Click="BackButton_Click" extension:Extensions.ExtendsStatus="True" />
+            <Button x:Name="gotoVerseButton" Grid.Column="1" Style="{DynamicResource defaultActionButonBstrpTurquoise}" Tag="ArrowRight" Content="Ayete Git" Click="gotoVerseButton_Click" extension:Extensions.ExtendsStatus="True" />
+            <Button x:Name="sendResult" Grid.Column="2" Style="{DynamicResource defaultActionButonBstrpOrange}" Tag="Archive" Content="Sonuc" Click="sendResult_Click" extension:Extensions.ExtendsStatus="True" />
+            <Button x:Name="printButton" Grid.Column="3" Style="{DynamicResource defaultActionButonBstrpDark}" Tag="Printer" Content="Yazdır" Click="printButton_Click" extension:Extensions.ExtendsStatus="True" />
+            <Button x:Name="deleteButton" Grid.Column="4" Style="{DynamicResource defaultActionButonBstrpRedd}" Tag="Trash" Content="Notu Sil" Click="deleteButton_Click" extension:Extensions.ExtendsStatus="True" />
+            <Button x:Name="saveButton" Grid.Column="5" IsEnabled="False" Style="{DynamicResource defaultActionButonBstrpDynamicSave}" Tag="Save" Content="Kaydet" Click="saveButton_Click" extension:Extensions.ExtendsStatus="True" />
         </Grid>
+
         <Border Grid.Row="3" Grid.ColumnSpan="2" Padding="10" Background="#fff" Style="{DynamicResource defaultBorderShadowEffect}">
 
-            <TextBox x:Name="loadNoteDetail" TextWrapping="Wrap" AcceptsReturn="True" MaxLength="3500" Style="{DynamicResource nt_DetailTxtBox}" Text="" TextChanged="loadNoteDetail_TextChanged" />
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <TextBox x:Name="loadNoteDetail" Visibility="Hidden" Grid.Row="0" TextWrapping="Wrap" AcceptsReturn="True" MaxLength="3500" Style="{DynamicResource nt_DetailTxtBox}" Text="" TextChanged="loadNoteDetail_TextChanged" />
+            </Grid>
         </Border>
     </Grid>
 </Page>
