--- a/KuranX.App/Core/Pages/ReminderF/RemiderItem.xaml
+++ b/KuranX.App/Core/Pages/ReminderF/RemiderItem.xaml
@@ -8,7 +8,7 @@
        xmlns:gif="http://wpfanimatedgif.codeplex.com"
       mc:Ignorable="d"
       d:DesignHeight="708" d:DesignWidth="1115" d:MaxHeight="708" d:MaxWidth="1270" d:MinWidth="1115"
-      Title="RemiderFrame" Background="#FAFAFA">
+      Title="RemiderFrame" Background="#FAFAFA" Loaded="Page_Loaded">
 
     <Grid>
 
@@ -114,7 +114,7 @@
                         <RowDefinition Height="140" />
                     </Grid.RowDefinitions>
                     <Border  Grid.Row="0" Style="{DynamicResource pp_BorderHeader}">
-                        <TextBlock Text="Konuyu Sil" Style="{DynamicResource pp_HeaderText}" />
+                        <TextBlock Text="Hatırlatıcıyı Sil" Style="{DynamicResource pp_HeaderText}" />
                     </Border>
                     <Grid Grid.Row="1">
                         <Grid.RowDefinitions>
@@ -122,7 +122,7 @@
                             <RowDefinition Height="50" />
                         </Grid.RowDefinitions>
                         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Width="280" Grid.Row="0">
-                            <TextBlock Text=" Hatırlatıcıyı Silmek istediğinize emin misiniz bu işlem geri alınamaz. " TextWrapping="Wrap" TextAlignment="Center" FontFamily="{DynamicResource PoppinsMedium}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            <TextBlock Text=" Hatırlatıcıyı silmek istediğinize emin misiniz bu işlem geri alınamaz. " TextWrapping="Wrap" TextAlignment="Center" FontFamily="{DynamicResource PoppinsMedium}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" />
                         </StackPanel>
                         <Grid Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Grid.ColumnDefinitions>
@@ -145,27 +145,34 @@
 
             <Border Style="{DynamicResource frameTab}">
                 <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="10" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Border Grid.Column="0"  CornerRadius="5 0 0 5" x:Name="remiderType" />
-                    <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center" Margin="10 5 10 5">
-                        <TextBlock x:Name="header" Text="Remider NAME" Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="16" />
-                        <TextBlock x:Name="create" Text="CREATE" Foreground="#7B7B7B" FontFamily="{DynamicResource PoppinsMedium}" FontSize="11" Margin="0 5 0 5" />
-                        <TextBlock x:Name="type" Text="Type"  FontFamily="{DynamicResource PoppinsMedium}" FontSize="11" />
-                    </StackPanel>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+
+                    <Grid x:Name="loadHeaderStack" Grid.Row="0"  Style="{DynamicResource aniEffectFadeGrid}" Visibility="Hidden">
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="10" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Border Grid.Column="0"  CornerRadius="5 0 0 5" x:Name="remiderType" />
+                        <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center" Margin="10 5 10 5">
+                            <TextBlock x:Name="header" Text="Remider NAME" Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="16" />
+                            <TextBlock x:Name="create" Text="CREATE" Foreground="#7B7B7B" FontFamily="{DynamicResource PoppinsMedium}" FontSize="11" Margin="0 5 0 5" />
+                            <TextBlock x:Name="type" Text="Type"  FontFamily="{DynamicResource PoppinsMedium}" FontSize="11" />
+                        </StackPanel>
+                    </Grid>
                 </Grid>
             </Border>
         </StackPanel>
 
-        <Grid Grid.Row="1"  Grid.ColumnSpan="2">
+        <Grid Grid.Row="1"  Grid.ColumnSpan="2" Style="{DynamicResource aniEffectFadeGrid}" Visibility="Hidden" x:Name="controlBar">
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
-
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
@@ -177,9 +184,16 @@
             <Button x:Name="deleteButton" Grid.Column="2" Style="{DynamicResource defaultActionButonBstrpRedd}"  Width="200" Tag="Trash" Content="Hatırlatıcıyı Sil" Click="deleteButton_Click" />
             <Button x:Name="saveButton" Grid.Column="3" IsEnabled="False" Style="{DynamicResource defaultActionButonBstrpDynamicSave}" Tag="Save" Content="Kaydet" Click="saveButton_Click" />
         </Grid>
+
         <Border Grid.Row="3" Grid.ColumnSpan="2" Padding="10" Background="#fff" Style="{DynamicResource defaultBorderShadowEffect}">
 
-            <TextBox x:Name="remiderDetail" TextWrapping="Wrap" AcceptsReturn="True" MaxLength="3500" Style="{DynamicResource nt_DetailTxtBox}" Text="" TextChanged="remiderDetail_TextChanged" />
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <TextBox x:Name="remiderDetail" TextWrapping="Wrap" AcceptsReturn="True" MaxLength="3500" Style="{DynamicResource nt_DetailTxtBox}" Text="" TextChanged="remiderDetail_TextChanged" />
+            </Grid>
         </Border>
     </Grid>
 </Page>
