--- a/KuranX.App/Core/ResourceXaml/defaultDesign.xaml
+++ b/KuranX.App/Core/ResourceXaml/defaultDesign.xaml
@@ -1,9 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib"
-                    xmlns:cef="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
-                    xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                    xmlns:extension="clr-namespace:KuranX.App.Core.Classes">
+                    xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks">
 
     <!-- ROOT STYLE -->
 
@@ -42,7 +40,6 @@
         <Setter Property="BorderBrush" Value="#E1E3E6" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Margin" Value="0" />
-
         <Style.Triggers>
             <Trigger Property="Visibility" Value="Visible">
                 <Trigger.EnterActions>
@@ -92,7 +89,7 @@
     </Style>
 
     <Style x:Key="redBorderShadowEffect" TargetType="Border">
-        <Setter Property="SnapsToDevicePixels" Value="true" />
+        <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="UseLayoutRounding" Value="True" />
         <Setter Property="Background" Value="#FFFFFF" />
         <Setter Property="CornerRadius" Value="5 5 5 5" />
@@ -155,6 +152,27 @@
         <Setter Property="Foreground" Value="#DC3545" />
         <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
         <Setter Property="Visibility" Value="Hidden" />
+        <Style.Triggers>
+            <Trigger Property="Visibility" Value="Visible">
+                <Trigger.EnterActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetProperty="Opacity"
+                             From="0.0" To="1.0" Duration="0:0:0.5" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.EnterActions>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="defaultLoadText" TargetType="TextBlock">
+
+        <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
+        <Setter Property="FontSize" Value="22" />
+        <Setter Property="Foreground" Value="#1C1E2F" />
+        <Setter Property="Padding" Value="30 5 30 5" />
+
         <Style.Triggers>
             <Trigger Property="Visibility" Value="Visible">
                 <Trigger.EnterActions>
@@ -283,7 +301,8 @@
     </Style>
 
     <Style x:Key="aniEffectFadeStack" TargetType="StackPanel">
-
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="UseLayoutRounding" Value="True" />
         <Style.Triggers>
             <Trigger Property="Visibility" Value="Visible">
                 <Trigger.EnterActions>
@@ -299,7 +318,8 @@
     </Style>
 
     <Style x:Key="aniEffectFadeGrid" TargetType="Grid">
-
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="UseLayoutRounding" Value="True" />
         <Style.Triggers>
             <Trigger Property="Visibility" Value="Visible">
                 <Trigger.EnterActions>
@@ -315,7 +335,8 @@
     </Style>
 
     <Style x:Key="aniEffectFadeBorder" TargetType="Border">
-
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="UseLayoutRounding" Value="True" />
         <Style.Triggers>
             <Trigger Property="Visibility" Value="Visible">
                 <Trigger.EnterActions>
@@ -472,14 +493,12 @@
     </Style>
 
     <Style x:Key="defaultActionButon" TargetType="Button">
-
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="UseLayoutRounding" Value="True" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="BorderBrush" Value="{x:Null}" />
         <Setter Property="Height" Value="40" />
         <Setter Property="Width" Value="150" />
-
         <Setter Property="Background" Value="#FFFFFF" />
         <Setter Property="Foreground"  Value="#1C1E2F" />
     </Style>
@@ -488,10 +507,11 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border x:Name="border" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Padding="20 5 20 5" Style="{DynamicResource defaultBorderShadowEffect}">
-                        <StackPanel Orientation="Horizontal" UseLayoutRounding="True" SnapsToDevicePixels="True" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Border x:Name="border" Height="30" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Style="{DynamicResource defaultBorderShadowEffect}">
+
+                        <StackPanel Orientation="Horizontal" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Icon:PackIconBootstrapIcons x:Name="icon" Kind="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" Width="17" Height="17"  Foreground="#1C1E2F" VerticalAlignment="Center" />
-                            <TextBlock  x:Name="text" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontSize="13" FontFamily="{DynamicResource PoppinsMedium}" Margin="10 0 0 0" Foreground="#1C1E2F" />
+                            <TextBlock  x:Name="text" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" FontFamily="{DynamicResource PoppinsMedium}" Margin="10 0 0 0" Foreground="#1C1E2F" />
                         </StackPanel>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -515,8 +535,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border x:Name="border" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Padding="20 5 20 5" Style="{DynamicResource defaultBorderShadowEffect}">
-                        <StackPanel Orientation="Horizontal" UseLayoutRounding="True" SnapsToDevicePixels="True" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Border x:Name="border" Height="30" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Style="{DynamicResource defaultBorderShadowEffect}">
+                        <StackPanel Orientation="Horizontal" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Icon:PackIconBootstrapIcons x:Name="icon" Kind="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" Width="17" Height="17"  Foreground="#1C1E2F" VerticalAlignment="Center" />
                             <TextBlock  x:Name="text" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" FontFamily="{DynamicResource PoppinsMedium}" Margin="10 0 0 0" Foreground="#1C1E2F" />
                         </StackPanel>
@@ -542,8 +562,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border x:Name="border" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Padding="20 5 20 5" Style="{DynamicResource defaultBorderShadowEffect}">
-                        <StackPanel Orientation="Horizontal" UseLayoutRounding="True" SnapsToDevicePixels="True" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Border x:Name="border" Height="30" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Style="{DynamicResource defaultBorderShadowEffect}">
+                        <StackPanel Orientation="Horizontal" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Icon:PackIconBootstrapIcons x:Name="icon" Kind="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" Width="17" Height="17"  Foreground="#1C1E2F" VerticalAlignment="Center" />
                             <TextBlock  x:Name="text" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" FontFamily="{DynamicResource PoppinsMedium}" Margin="10 0 0 0" Foreground="#1C1E2F" />
                         </StackPanel>
@@ -569,8 +589,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border x:Name="border" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Padding="20 5 20 5" Style="{DynamicResource defaultBorderShadowEffect}">
-                        <StackPanel Orientation="Horizontal" UseLayoutRounding="True" SnapsToDevicePixels="True" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Border x:Name="border" Height="30" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Style="{DynamicResource defaultBorderShadowEffect}">
+                        <StackPanel Orientation="Horizontal" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Icon:PackIconBootstrapIcons x:Name="icon" Kind="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" Width="17" Height="17"  Foreground="#1C1E2F" VerticalAlignment="Center" />
                             <TextBlock  x:Name="text" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" FontFamily="{DynamicResource PoppinsMedium}" Margin="10 0 0 0" Foreground="#1C1E2F" />
                         </StackPanel>
@@ -597,8 +617,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border x:Name="border" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Padding="20 5 20 5" Style="{DynamicResource defaultBorderShadowEffect}">
-                        <StackPanel Orientation="Horizontal" UseLayoutRounding="True" SnapsToDevicePixels="True" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Border x:Name="border" Height="30" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Style="{DynamicResource defaultBorderShadowEffect}">
+                        <StackPanel Orientation="Horizontal" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Icon:PackIconBootstrapIcons x:Name="icon" Kind="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" Width="17" Height="17"  Foreground="#1C1E2F" VerticalAlignment="Center" />
                             <TextBlock  x:Name="text" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" FontFamily="{DynamicResource PoppinsMedium}" Margin="10 0 0 0" Foreground="#1C1E2F" />
                         </StackPanel>
@@ -624,8 +644,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border x:Name="border" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Padding="20 5 20 5" Style="{DynamicResource defaultBorderShadowEffect}">
-                        <StackPanel Orientation="Horizontal" UseLayoutRounding="True" SnapsToDevicePixels="True" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Border x:Name="border" Height="30" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Style="{DynamicResource defaultBorderShadowEffect}">
+                        <StackPanel Orientation="Horizontal" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Icon:PackIconBootstrapIcons x:Name="icon" Kind="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" Width="17" Height="17"  Foreground="#1C1E2F" VerticalAlignment="Center" />
                             <TextBlock  x:Name="text" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" FontFamily="{DynamicResource PoppinsMedium}" Margin="10 0 0 0" Foreground="#1C1E2F" />
                         </StackPanel>
@@ -651,8 +671,9 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border x:Name="border" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Padding="20 5 20 5" Style="{DynamicResource defaultBorderShadowEffect}">
-                        <StackPanel Orientation="Horizontal" UseLayoutRounding="True" SnapsToDevicePixels="True" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Border x:Name="border" Height="30" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Style="{DynamicResource defaultBorderShadowEffect}">
+
+                        <StackPanel Orientation="Horizontal" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Icon:PackIconBootstrapIcons x:Name="icon" Kind="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" Width="17" Height="17"  Foreground="#1C1E2F" VerticalAlignment="Center" />
                             <TextBlock  x:Name="text" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" FontFamily="{DynamicResource PoppinsMedium}" Margin="10 0 0 0" Foreground="#1C1E2F" />
                         </StackPanel>
@@ -679,8 +700,9 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border x:Name="border" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Padding="20 5 20 5" Style="{DynamicResource defaultBorderShadowEffect}">
-                        <StackPanel Orientation="Horizontal" UseLayoutRounding="True" SnapsToDevicePixels="True" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Border x:Name="border" Height="30" Background="{TemplateBinding Background}" VerticalAlignment="Center" BorderThickness="0" CornerRadius="5" Style="{DynamicResource defaultBorderShadowEffect}">
+
+                        <StackPanel Orientation="Horizontal" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Icon:PackIconBootstrapIcons x:Name="icon" Kind="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" Width="17" Height="17"  Foreground="#1C1E2F" VerticalAlignment="Center" />
                             <TextBlock  x:Name="text" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" FontFamily="{DynamicResource PoppinsMedium}" Margin="10 0 0 0" Foreground="#1C1E2F" />
                         </StackPanel>
