--- a/KuranX.App/Core/ResourceXaml/popupDesing.xaml
+++ b/KuranX.App/Core/ResourceXaml/popupDesing.xaml
@@ -51,6 +51,7 @@
         <Setter Property="FontFamily" Value="{DynamicResource PoppinsSemiBold}" />
         <Setter Property="Background" Value="{x:Null}" />
         <Setter Property="BorderBrush" Value="#ADB5BD" />
+
         <Setter Property="Margin" Value="0 5 0 0" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Padding" Value="10 0 10 0" />
@@ -67,6 +68,7 @@
                         <Trigger Property="IsReadOnly" Value="True">
                             <Setter Property="Background" Value="#f3f2f7" TargetName="PART_ContentHost" />
                             <Setter Property="BorderThickness" Value="0" />
+                            <Setter Property="TextAlignment" Value="Center" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
