--- a/KuranX.App/Core/ResourceXaml/remiderDesign.xaml
+++ b/KuranX.App/Core/ResourceXaml/remiderDesign.xaml
@@ -14,7 +14,7 @@
 
         <Setter Property="Foreground" Value="#7B7B7B" />
         <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
-        <Setter Property="FontSize" Value="11" />
+        <Setter Property="FontSize" Value="12" />
         <Setter Property="Padding" Value="10 0 10 0" />
     </Style>
 
@@ -55,7 +55,7 @@
         <Setter Property="TextWrapping" Value="Wrap" />
         <Setter Property="Foreground" Value="#1C1E2F" />
         <Setter Property="TextTrimming" Value="CharacterEllipsis" />
-        <Setter Property="FontFamily" Value="{DynamicResource PoppinsRegular}" />
+        <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
         <Setter Property="FontSize" Value="12" />
         <Setter Property="Padding" Value="10 0 10 0" />
     </Style>
