--- a/KuranX.App/Core/ResourceXaml/verseDesing.xaml
+++ b/KuranX.App/Core/ResourceXaml/verseDesing.xaml
@@ -4,8 +4,14 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <!-- Default -->
+
+    <Style x:Key="customFont">
+
+        <Setter Property="TextElement.FontFamily" Value="../../Resource/Fonts/#XBZar" />
+    </Style>
+
     <Style x:Key="defaultBorderShadowEffect" TargetType="Border">
-        <Setter Property="SnapsToDevicePixels" Value="true" />
+        <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="UseLayoutRounding" Value="True" />
         <Setter Property="Background" Value="#FFFFFF" />
         <Setter Property="CornerRadius" Value="5 5 5 5" />
@@ -76,7 +82,7 @@
         <Setter Property="TextTrimming" Value="CharacterEllipsis" />
         <Setter Property="FontSize" Value="24" />
         <Setter Property="Foreground" Value="#FF1C1E2F" />
-        <Setter Property="FontFamily" Value="XB Zar" />
+        <Setter Property="FontFamily" Value="{DynamicResource XBZar}" />
     </Style>
 
     <Style x:Key="vrs_TrText" TargetType="TextBlock">
@@ -381,7 +387,7 @@
         <Setter Property="BorderBrush" Value="{x:Null}" />
         <Setter Property="Background" Value="#FFF" />
         <Setter Property="Foreground"  Value="#1C1E2F" />
-        <Setter Property="Margin" Value="30 0 30 0" />
+        <Setter Property="Margin" Value="20 0 20 0" />
 
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
@@ -397,8 +403,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border Background="{TemplateBinding Background}" Style="{DynamicResource defaultBorderShadowEffect}" Padding="20 5 20 5" SnapsToDevicePixels="True" UseLayoutRounding="True">
-                        <StackPanel Orientation="Horizontal">
+                    <Border Background="{TemplateBinding Background}" Style="{DynamicResource defaultBorderShadowEffect}" Padding="10 5 10 5" SnapsToDevicePixels="True" UseLayoutRounding="True">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                             <Icon:PackIconJamIcons Kind="{Binding Path=Tag,RelativeSource={RelativeSource TemplatedParent}}" VerticalAlignment="Center" Width="22" Height="22" />
                             <TextBlock Text="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" Width="Auto" MaxWidth="210" FontFamily="{DynamicResource PoppinsSemiBold}" TextWrapping="Wrap" Margin="10 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" />
                         </StackPanel>
@@ -413,10 +419,10 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border Background="{TemplateBinding Background}" Style="{DynamicResource defaultBorderShadowEffect}" Padding="20 5 20 5" SnapsToDevicePixels="True" UseLayoutRounding="True">
-                        <StackPanel Orientation="Horizontal">
-                            <Icon:PackIconEvaIcons Kind="{Binding Path=Tag,RelativeSource={RelativeSource TemplatedParent}}" VerticalAlignment="Center" Width="18" Height="18" />
-                            <TextBlock TextAlignment="Center" Text="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" Width="Auto" MaxWidth="210" FontFamily="{DynamicResource PoppinsSemiBold}" TextWrapping="Wrap" Margin="10 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                    <Border Background="{TemplateBinding Background}" Style="{DynamicResource defaultBorderShadowEffect}" Padding="10 5 10 5" SnapsToDevicePixels="True" UseLayoutRounding="True">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                            <TextBlock TextAlignment="Center" Text="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" Width="Auto" MaxWidth="210" FontFamily="{DynamicResource PoppinsSemiBold}" TextWrapping="Wrap"  VerticalAlignment="Center" HorizontalAlignment="Center" />
+                            <Icon:PackIconEvaIcons Kind="{Binding Path=Tag,RelativeSource={RelativeSource TemplatedParent}}" VerticalAlignment="Center" Width="18" Height="18" Margin="10 0 0 0" />
                         </StackPanel>
                     </Border>
                 </ControlTemplate>
